# Genesis

./: README.md  cli.py  deploy_to_brew.sh  genesis.rb  genesis_template.rb  install_genesis.sh  main.py  pyproject.toml  requirements.txt  setup.py
Formula/: genesis.rb
agents/: __init__.py  architecture_agent.py  brain_agent.py  coding_agent.py  coordinator_agent.py  deployment_agent.py  documentation_agent.py  integration_agent.py  interface_agent.py  mitosis_agent.py  parser_agent.py  testing_agent.py  versioning_agent.py
agents/coding/: code_enhancer.py  code_generator.py  file_manager.py
homebrew-genesis/: genesis.rb
tests/: test_generate_website.py
tools/: generate_website.py
