[tool.poetry]
name = "project-genesis"
version = "0.1.9"
description = "Project Genesis: The Dawn of Autonomous Code Evolution"
authors = ["Manu Rueda <jm.glezderueda@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.3"
langchain = "*"
pytest = "*"
requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
