[tool.poetry]
name = "genesis"
version = "0.1.15"
description = "Project Genesis: The Dawn of Autonomous Code Evolution"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry.packages]
genesis = {from = "genesis"}

[tool.poetry.scripts]
genesis = "genesis.cli:main"  # Make sure this points to the correct module in `agents/`

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
