[tool.poetry]
name = "genesis"
version = "0.1.29"
description = "Project Genesis: The Dawn of Autonomous Code Evolution"
authors = ["Manu Rueda <jm.glezderueda@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry.packages]
packages = [
    { include = "genesis" }
]

[tool.poetry.scripts]
genesis = "genesis.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
